--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <title>Sarita Coder</title>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
-  <link rel="icon" href="img/SARITA-02.png"/>
+  <link rel="shourtcut icon" href="img/SARITA-02.png" type="image/png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="css/animate.css"/>
   <link rel="stylesheet" href="css/ihover.css"/>
@@ -75,20 +75,20 @@
       <div class="row description">
         <div class="col-sm-5 col-sm-offset-1 text-center">
           <p class="hola text-left">¡Hola!</p>
-          <p>Mi nombre es Sarita, soy desarrolladora front-end mi pasión por el mundo digital se ha inclinado por la programación desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Me encanta lo que hago y disfruto mucho trabajando en equipo.</p>
+          <p>Mi nombre es Sarita, soy desarrolladora front-end mi pasión por el mundo digital se ha inclinado por la programación y desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Me encanta lo que hago y disfruto mucho trabajando en equipo.</p>
           <div class="cualidades">
-            <div class="row">
-              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-heart-o"></span><span>Naturaleza</span></div>
-              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-thumbs-o-up"></span><span>Fuerza</span></div>
-              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-lightbulb-o"></span><span>Inteligente</span></div>
-              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-users"></span><span>Equipo</span></div>
-              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-laptop"></span><span>Compañero</span></div>
-              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-globe"></span><span>Viajar</span></div>
+            <div class="row text-center">
+              <div class="col-sm-3 col-xs-3 text-center"><span class="fa fa-thumbs-o-up"></span><span>Fuerza</span></div>
+              <div class="col-sm-3 col-xs-3 text-center"><span class="fa fa-lightbulb-o"></span><span>Inteligente</span></div>
+              <div class="col-sm-3 col-xs-3 text-center"><span class="fa fa-users"></span><span>Equipo</span></div>
+              <div class="col-sm-3 col-xs-3 text-center"><span class="fa fa-laptop"></span><span>Compañero</span></div>
             </div>
           </div>
         </div>
         <div class="col-sm-5 text-center">
-          <div class="foto"></div>
+          <div class="foto">
+            <!--img(src="img/sobre_mi2.jpg", alt="")-->
+          </div>
         </div>
       </div>
     </div>
