--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
           </div>
         </div>
         <div class="col-sm-5 text-center">
-          <div class="foto">
-            <!--img(src="img/sobre_mi2.jpg", alt="")-->
-          </div>
+          <div class="foto"></div>
         </div>
       </div>
     </div>
