--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8"/>
   <title>Sarita Coder</title>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
-  <link rel="shourtcut icon" href="img/SARITA-02.png" type="image/png"/>
+  <link rel="icon" type="image/png" href="img/SARITA-02.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="css/animate.css"/>
-  <link rel="stylesheet" href="css/ihover.css"/>
   <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -91,7 +90,7 @@
       </div>
     </div>
   </div>
-  <div id="lema" class="w-100">
+  <div id="lemas" class="w-100">
     <div class="container lema text-center">
       <div id="maquina" class="w-100"></div>
     </div>
@@ -123,54 +122,173 @@
             </ul>
           </div>
           <div class="portfolio_item">
-            <div class="mix category-1 jade sass">
-              <div class="ih-item square effect8 scale_up colored"><a href="#">
-                  <div class="img"><img src="img/flat-theme-01.png"/></div>
-                  <div class="info">
-                    <h3>Flat Theme</h3><a href="http://sarita-coder.github.io/Love-Blog"></a><span class="fa fa-arrow-right"></span>
-                  </div></a></div>
+            <div class="mix category-1 css">
+              <div class="carta">
+                <div class="lado frente"><img src="img/dashboard.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>DashBoard</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Css </p>
+                    <p>Html5</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/Dashy" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/Dashy" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
             </div>
-            <div class="mix category-1 sass jade">
-              <div class="ih-item square effect8 scale_up colored"><a href="#">
-                  <div class="img"><img src="img/future-imperfect.png"/></div>
-                  <div class="info">
-                    <h3>Future Imperfect</h3><a href="http://sarita-coder.github.io/future-imperfect"></a><span class="fa fa-arrow-right"></span>
-                  </div></a></div>
+            <div class="mix category-1 css js">
+              <div class="carta">
+                <div class="lado frente"><img src="img/whatsap.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Whaptsap</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Sass</p>
+                    <p>Jade</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/whassapt" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/whassapt" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
             </div>
-            <div class="mix category-1 jade grupal sass">
-              <div class="ih-item square effect8 scale_up colored"><a href="#">
-                  <div class="img"><img src="img/republica.png"/></div>
-                  <div class="info">
-                    <h3>República</h3><a href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica"></a><span class="fa fa-arrow-right"></span>
-                  </div></a></div>
+            <div class="mix category-1 sass grupal js">
+              <div class="carta">
+                <div class="lado frente"><img src="img/primes.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Primes</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Css </p>
+                    <p>Html5</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/saracoders/primes" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://dev.laboratoria.la/primes.sary/" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
             </div>
             <div class="mix category-1 css">
-              <div class="ih-item square effect8 scale_up colored"><a href="#">
-                  <div class="img"><img src="img/whatsap.png"/></div>
-                  <div class="info">
-                    <h3>Whaptsap</h3><a href="http://sarita-coder.github.io/whassapt"></a><span class="fa fa-arrow-right"></span>
-                  </div></a></div>
+              <div class="carta">
+                <div class="lado frente"><img src="img/kene.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Kane</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Css </p>
+                    <p>Html5</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/Kane" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/Kane" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
+            </div>
+            <div class="mix category-1 jade sass grupal">
+              <div class="carta">
+                <div class="lado frente"><img src="img/flat.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Flat Theme</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Sass</p>
+                    <p>Jade</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sazabache/Flat-theme" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sazabache.github.io/Flat-theme" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
+            </div>
+            <div class="mix category-1 jade sass">
+              <div class="carta">
+                <div class="lado frente"><img src="img/portfolio_1.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Love Blog</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <P>Html5</P>
+                    <p>Sass </p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/Love-Blog" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/Love-Blog" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
+            </div>
+            <div class="mix category-1 jade sass grupal">
+              <div class="carta">
+                <div class="lado frente"><img src="img/Blog-Responsive.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Flatness</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Css </p>
+                    <p>Html5</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/blog-responsibe" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/blog-responsibe" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
+            </div>
+            <div class="mix category-1 sass jade">
+              <div class="carta">
+                <div class="lado frente"><img src="img/future-imperfect.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Future Imperfect</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Sass</p>
+                    <p>Jade</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/future-imperfect" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/future-imperfect" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
+            </div>
+            <div class="mix category-1 jade grupal sass">
+              <div class="carta">
+                <div class="lado frente"><img src="img/republica.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>República</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Sass</p>
+                    <p>Jade</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/emilyvivancocuba/Examen-grupal-La-Republica" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
             </div>
             <div class="mix category-1 sass">
-              <div class="ih-item square effect8 scale_up colored"><a href="#">
-                  <div class="img"><img src="img/triangle.png"/></div>
-                  <div class="info">
-                    <h3>Triangle</h3><a href="http://sarita-coder.github.io/triangle-free"></a><span class="fa fa-arrow-right"></span>
-                  </div></a></div>
+              <div class="carta">
+                <div class="lado frente"><img src="img/triangle.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Triangle</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Css </p>
+                    <p>Html5</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/triangle-free" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/triangle-free" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
             </div>
             <div class="mix category-1 js">
-              <div class="ih-item square effect8 scale_up colored"><a href="#">
-                  <div class="img"><img src="img/reloj_digital.png"/></div>
-                  <div class="info">
-                    <h3>Reloj Digital</h3><a href="http://sarita-coder.github.io/reloj-digital"></a><span class="fa fa-arrow-right"></span>
-                  </div></a></div>
+              <div class="carta">
+                <div class="lado frente"><img src="img/reloj_digital.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Reloj Digital</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Css</p>
+                    <p>Js</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/reloj-digital" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/reloj-digital" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
             </div>
-            <div class="mix category-1 sass grupal">
-              <div class="ih-item square effect8 scale_up colored"><a href="#">
-                  <div class="img"><img src="img/flat.png"/></div>
-                  <div class="info">
-                    <h3>Flat Theme</h3><a href="http://sazabache.github.io/Flat-theme"></a><span class="fa fa-arrow-right"></span>
-                  </div></a></div>
+            <div class="mix category-1 css js">
+              <div class="carta">
+                <div class="lado frente"><img src="img/smach-face.png" class="w-100"/></div>
+                <div class="lado atras">
+                  <h4>Smach Face</h4>
+                  <div class="texto text-left">
+                    <p>Tecnologías usadas:</p>
+                    <p>Css</p>
+                    <p>Js</p>
+                    <p>Bootstrap</p>
+                  </div><a href="https://github.com/sarita-coder/smash-faces" target="_blank">Ver código<span class="fa fa-github"></span></a><a href="http://sarita-coder.github.io/smash-faces" target="_blank">Visitar página<span class="fa fa-arrow-right"></span></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -206,31 +324,23 @@
     </div>
   </div>
   <div id="contacto" class="main">
-    <div class="container text-center contacto">
+    <div class="container text-center contacto pd_100">
       <div class="row">
         <div class="title">
           <h1>Contactame</h1>
         </div>
       </div>
       <div class="row">
-        <p> <a href="mailto:sarita.roman.colonio@gmail.com" class="mail">sarita.roman.colonio@gmail.com</a></p>
-        <p><a href="" class="mail">991645498</a></p>
         <div class="col-sm-4 col-sm-offset-1">
           <div class="foto1"></div>
         </div>
-        <div class="col-sm-6">
-          <form>
-            <div class="form-group text-left">
-              <label for="exampleInputEmail1" class="w-100">Name
-                <input type="email" id="exampleInputEmail1" placeholder="Name" class="form-control"/>
-              </label>
-              <label for="exampleInputEmail1" class="w-100">Email
-                <input type="email" id="exampleInputEmail1" placeholder="Email" class="form-control"/>
-              </label>
-              <textarea rows="3" class="form-control">Hola, Tengo un proyecto y me gustaría que seas parte del equipo por que necesitamos personas comprometidas y creativas. </textarea>
-              <button type="submit" class="btn-enviar btn btn-default">Enviar</button>
-            </div>
-          </form>
+        <div class="col-sm-4 col-sm-offset-1">
+          <div class="mensaje">
+            <p>¡Hola¡ </p>
+            <p>Gracias por visitar mi portafolio si te gusto y tienes un proyecto, contáctame lo heremos realidad, encantada de ser parte del equipo.</p>
+            <p> <a href="mailto:sarita.roman.colonio@gmail.com" class="mail">sarita.roman.colonio@gmail.com</a></p>
+            <p><a href="" class="mail">991645498</a></p>
+          </div>
         </div>
       </div>
     </div>
