--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en"></html>
 <head>
   <meta charset="UTF-8"/>
-  <title>Sarita Coder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Mi Portafolio Web</title>
+  <meta name="Keywords" content="Portafolio Web, Front-end, Laboratoria, sarita-coder"/>
+  <meta name="Description" content="Portafolio Web, Front-end, Laboratoria, sarita-coder"/>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
   <link rel="icon" type="image/png" href="img/SARITA-02.png"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
   <link rel="stylesheet" href="css/animate.css"/>
   <link rel="stylesheet" href="css/main.css"/>
 </head>
