--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <div class="container text-center contacto pd_100">
       <div class="row">
         <div class="title">
-          <h1>Contactame</h1>
+          <h1>Contáctame</h1>
         </div>
       </div>
       <div class="row">
