main sobre mi fot

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-5 text-center">
+          <div class="col-sm-5 text-center mg-10">
             <div class="foto"></div>
           </div>
         </div>
